fixed menu align in chromium-based browsers

--- a/css/response.css
+++ b/css/response.css
@@ -1,13 +1,27 @@
 /* response.css */
+@media only screen and (max-width: 1470px) {
+		#foot-sitemap {
+			padding: 0 0 0 2em;
+		}
+		#foot-social {
+			padding: 0 2em 0 0;
+		}
+}
 @media only screen and (max-width: 1460px) {
   	header {
   		padding: 14px;
   		width: 100%;
   	}
   	#desktop-nav {
-  		margin: 1em 2em 0 0;
+  		margin: 1em 0 0 0;
   		width: 70%;
   	}
+  		#desktop-nav ul {
+  			justify-content: flex-end;
+  		}
+  			#desktop-nav li:last-child {
+  				margin: 0 2em 0 0;
+  			}
   	#content-one, #content-two, #quote {
   		padding-left: 1em;
   		padding-right: 1em;
@@ -25,7 +39,7 @@
 		}
 }
 
-@media only screen and (max-width: 850px) {
+@media only screen and (max-width: 880px) {
 	header {
 		padding: 14px;
 	}
@@ -92,7 +106,7 @@
 		 }
 }
 
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 846px) {
  	header {
  		width: 100%;
  		padding: 0;
